# cpp-cli-browser

./: CMakeLists.txt  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/src/: main.cpp
cpp/src/cli_handler/: cli_handler.hpp
cpp/src/search_handler/: search_handler.hpp
rust/: Cargo.toml
rust/src/: main.rs
rust/src/configs/: cli_handler_config.rs  mod.rs  search_handler_config.rs
rust/src/errors/: argument_error.rs  mod.rs
rust/src/handlers/: cli_handler.rs  file_handler.rs  mod.rs  search_handler.rs
src/: main.cpp
src/cli_handler/: cli_handler.cpp
src/file_handler/: file_handler.cpp  file_handler.hpp
src/search_handler/: search_handler.cpp
test/: text_file_1.txt
test/test_folder/: text_file_2.txt  text_file_3.txt
